--- a/index.html
+++ b/index.html
@@ -38,26 +38,26 @@
                             
                             <div class="filde">
                                 <label for="first-name">First name</label>
-                                <input type="text" id="first-name">
+                                <input type="text" id="first-name" placeholder="Name ..">
                             </div>
                             <div class="filde">
                                 <label for="last-name">Last name</label>
-                                <input type="text" id="last-name">
+                                <input type="text" id="last-name" placeholder="la9abek">
                             </div>
                         </div>
                         <div class="row">
                             <div class="filde">
                                 <label for="email">Email</label>
-                                <input type="email" id="email"required></div>
+                                <input type="email" id="email"required placeholder="qwert@gmail.com"></div>
                             <div class="filde">
                                 <label for="ph-number">Phone number</label>
-                                <input type="text"id='ph-number'>
+                                <input type="text"id='ph-number' placeholder="+21612123123">
                             </div>
                         </div>
                         <div class="row">
                             <div class="filde">
                             <label for="password">Password</label>
-                            <input type="password"id='password'required>
+                            <input type="password"id='password'required >
                             <p id="errer"></p>
                         </div>
                         <div class="filde">
